--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,34 @@
 {
-  "name": "server",
+  "name": "service",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^2.2.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
+    "joi": "^17.13.1",
+    "joi-objectid": "^4.0.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
-    "nodemon": "^3.1.3"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.3",
+    "sharp": "^0.33.4",
+    "slugify": "^1.6.6",
+    "uniqid": "^5.4.0"
   }
 }
