site pages are ready

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,14 @@
-MONGODB_URL="mongodb+srv://Yusif:Bedel@cluster0.ct5lqxj.mongodb.net/"
 
+//mongo db
+MONGODB_URL="mongodb+srv://Yusif:Bedel@cluster0.ct5lqxj.mongodb.net/"
 PORT=8080
+
+
+//node mailer
+EMAIL_USERNAME=tu7hqak2t@code.edu.az
+EMAIL_PASS=wngm qats jldo maik
+
+
+
+//jwt
+PRIVATE_KEY=YUSIF
