--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,11 +22,14 @@
     "joi": "^17.13.1",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
+    "mailer": "^0.6.7",
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node": "^22.3.0",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3",
+    "react-toastify": "^10.0.5",
     "sharp": "^0.33.4",
     "slugify": "^1.6.6",
     "uniqid": "^5.4.0"
